# homebase

./: .env.sample  .gitignore  MEMBERS.md  README.md  index.html  main.py  members.json  notes.txt  pnpm-lock.yaml  pyproject.toml  requirements.txt  sample_email.py  setup.py  turbo.json
app/: layout.tsx
apps/cwru-web/: .gitignore  middleware.ts  package.json  tailwind.config.ts
apps/cwru-web/AGENT-SESSIONS/: 2026-02-15-teksafari-inspired-redesign.md
apps/cwru-web/app/: page.tsx
apps/cwru-web/components/: phone-input.tsx
apps/cwru-web/drizzle/: 0003_mysterious_james_howlett.sql
apps/cwru-web/lib/: action-logger.ts  db.ts  email-templates.ts  schema.ts  submissions.ts
apps/cwru-web/scripts/: run-create-admin.js
apps/cwru-wtf/: README.md  pnpm-lock.yaml
apps/cwru-wtf/app/: globals.css
apps/cwru-wtf/components/: glitchy-wtf-text.tsx  project-card.tsx  submission-form.tsx  wtf-meanings.tsx
apps/cwru-wtf/drizzle/: 0000_square_sheva_callister.sql  0001_conscious_monster_badoon.sql  0002_closed_reptil.sql  0004_typical_lifeguard.sql  0005_productive_the_executioner.sql
apps/cwru-wtf/lib/: auth.ts  fonts.ts
apps/cwru-wtf/scripts/: create-admin.ts  fix-submission-status.ts  migrate-database.sql  migrate-database.ts  migrate-to-new-db.ts  run-migrate-database.js
components/: navbar.tsx
src/agent/: agent.py  models.py  prompts.py  schema.py  tools.py
src/config/: env.py
src/database/connection/: constants.py  session.py
src/utils/: audio.py  net.py  stt.py  ux.py
wth/agent-wtf/: setup.py
wth/event-scheduler/: .env.sample  README.md
(+54 files in other folders)
