[project]
name = "wtf-event-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httplib2>=0.30.0",
    "mongoengine>=0.29.1",
    "uvicorn>=0.35.0",
]
