[project]
name = "wth-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sounddevice>=0.5.4",
    "soundfile>=0.13.1",
    "starlette>=0.52.1",
]
